[project]
name = "pathlib-artifactory"
description = "Backport of pathlib ABCs"
readme = "README.rst"
authors = [
    {name = "Barney Gale", email = "barney.gale@gmail.com"},
]
license = "GPL-3.0-or-later"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">= 3.9"
dependencies = [
    "pathlib-abc ~= 0.5.1",
    "requests",
    "requests-seekable ~= 0.1.0",
]
dynamic = ["version"]

[project.urls]
"Source code" = "https://github.com/barneygale/pathlib-artifactory"
"Issue tracker" = "https://github.com/barneygale/pathlib-artifactory/issues"

[tool.setuptools.dynamic]
version.attr = "pathlib_artifactory.__version__"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
